@@ -24,29 +24,6 @@
  */
 package com.oracle.svm.driver;
 
-import com.oracle.graal.pointsto.api.PointstoOptions;
-import com.oracle.svm.core.FallbackExecutor;
-import com.oracle.svm.core.FallbackExecutor.Options;
-import com.oracle.svm.core.OS;
-import com.oracle.svm.core.SubstrateOptions;
-import com.oracle.svm.core.SubstrateUtil;
-import com.oracle.svm.core.configure.ConfigurationFiles;
-import com.oracle.svm.core.option.SubstrateOptionsParser;
-import com.oracle.svm.core.util.ClasspathUtils;
-import com.oracle.svm.core.util.UserError;
-import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.driver.MacroOption.EnabledOption;
-import com.oracle.svm.driver.MacroOption.MacroOptionKind;
-import com.oracle.svm.driver.MacroOption.Registry;
-import com.oracle.svm.hosted.AbstractNativeImageClassLoaderSupport;
-import com.oracle.svm.hosted.NativeImageGeneratorRunner;
-import com.oracle.svm.hosted.NativeImageSystemClassLoader;
-import com.oracle.svm.util.ModuleSupport;
-import org.graalvm.compiler.options.OptionKey;
-import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
-import org.graalvm.nativeimage.Platform;
-import org.graalvm.nativeimage.ProcessProperties;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
@@ -57,15 +34,10 @@ import java.lang.management.OperatingSystemMXBean;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
-import java.net.URI;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystemNotFoundException;
-import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.LinkOption;
-import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayDeque;
@@ -81,6 +53,7 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Properties;
+import java.util.Scanner;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -94,9 +67,39 @@ import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.graalvm.compiler.options.OptionKey;
+import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
+import org.graalvm.nativeimage.Platform;
+import org.graalvm.nativeimage.ProcessProperties;
+
+import com.oracle.graal.pointsto.api.PointstoOptions;
+import com.oracle.graal.pointsto.reports.ReportUtils;
+import com.oracle.svm.core.FallbackExecutor;
+import com.oracle.svm.core.FallbackExecutor.Options;
+import com.oracle.svm.core.OS;
+import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.SubstrateUtil;
+import com.oracle.svm.core.option.SubstrateOptionsParser;
+import com.oracle.svm.core.util.ClasspathUtils;
+import com.oracle.svm.core.util.VMError;
+import com.oracle.svm.driver.MacroOption.EnabledOption;
+import com.oracle.svm.driver.MacroOption.MacroOptionKind;
+import com.oracle.svm.driver.MacroOption.Registry;
+import com.oracle.svm.driver.metainf.MetaInfFileType;
+import com.oracle.svm.driver.metainf.NativeImageMetaInfResourceProcessor;
+import com.oracle.svm.driver.metainf.NativeImageMetaInfWalker;
+import com.oracle.svm.hosted.NativeImageGeneratorRunner;
+import com.oracle.svm.hosted.NativeImageSystemClassLoader;
+import com.oracle.svm.util.ModuleSupport;
+
 public class NativeImage {
 
-    private static final String DEFAULT_GENERATOR_CLASS_NAME = "com.oracle.svm.hosted.NativeImageGeneratorRunner";
+    /* Used to enable native-image JPMS support (WIP) - will become default once completed */
+    static final boolean USE_NI_JPMS = System.getenv().getOrDefault("USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM", "false").equalsIgnoreCase("true");
+
+    private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
+    private static final String DEFAULT_GENERATOR_MODULE_NAME = ModuleSupport.getModuleName(NativeImageGeneratorRunner.class);
+
     private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
     private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
 
@@ -109,7 +112,7 @@ public class NativeImage {
     }
 
     static final String graalvmVersion = System.getProperty("org.graalvm.version", "dev");
-    static final String graalvmConfig = System.getProperty("org.graalvm.config", "");
+    static final String graalvmConfig = System.getProperty("org.graalvm.config", "CE");
 
     private static Map<String, String[]> getCompilerFlags() {
         Map<String, String[]> result = new HashMap<>();
@@ -140,7 +143,7 @@ public class NativeImage {
 
     private static final String usageText = getResource("/Usage.txt");
 
-    class ArgumentQueue {
+    static class ArgumentQueue {
 
         private final ArrayDeque<String> queue;
         public final String argumentOrigin;
@@ -207,6 +210,7 @@ public class NativeImage {
         return oR + option.getName() + "=";
     }
 
+    final String oHModule = oH(SubstrateOptions.Module);
     final String oHClass = oH(SubstrateOptions.Class);
     final String oHName = oH(SubstrateOptions.Name);
     final String oHPath = oH(SubstrateOptions.Path);
@@ -220,15 +224,6 @@ public class NativeImage {
     final String oHTraceObjectInstantiation = oH(SubstrateOptions.TraceObjectInstantiation);
     final String oHTargetPlatform = oH(SubstrateOptions.TargetPlatform);
 
-    /* List arguments */
-    final String oHSubstitutionFiles = oH(ConfigurationFiles.Options.SubstitutionFiles);
-    final String oHReflectionConfigurationFiles = oH(ConfigurationFiles.Options.ReflectionConfigurationFiles);
-    final String oHDynamicProxyConfigurationFiles = oH(ConfigurationFiles.Options.DynamicProxyConfigurationFiles);
-    final String oHResourceConfigurationFiles = oH(ConfigurationFiles.Options.ResourceConfigurationFiles);
-    final String oHJNIConfigurationFiles = oH(ConfigurationFiles.Options.JNIConfigurationFiles);
-    final String oHSerializationConfigurationFiles = oH(ConfigurationFiles.Options.SerializationConfigurationFiles);
-    final String oHSerializationDenyConfigurationFiles = oH(ConfigurationFiles.Options.SerializationDenyConfigurationFiles);
-
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
     final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
 
@@ -238,12 +233,12 @@ public class NativeImage {
     private static final String pKeyNativeImageArgs = "NativeImageArgs";
 
     private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
+    private final LinkedHashSet<Path> imageBuilderModulePath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageBuilderBootClasspath = new LinkedHashSet<>();
-    private final LinkedHashSet<String> imageIncludeBuiltinModules = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
-    private final LinkedHashSet<Path> imageProvidedClasspath = new LinkedHashSet<>();
+    private final LinkedHashSet<Path> imageModulePath = new LinkedHashSet<>();
     private final ArrayList<String> customJavaArgs = new ArrayList<>();
     private final ArrayList<String> customImageBuilderArgs = new ArrayList<>();
     private final LinkedHashSet<Path> customImageClasspath = new LinkedHashSet<>();
@@ -255,7 +250,10 @@ public class NativeImage {
     private final Map<String, String> propertyFileSubstitutionValues = new HashMap<>();
 
     private boolean verbose = Boolean.valueOf(System.getenv("VERBOSE_GRAALVM_LAUNCHERS"));
+    private boolean diagnostics = false;
+    String diagnosticsDir;
     private boolean jarOptionMode = false;
+    private boolean moduleOptionMode = false;
     private boolean dryRun = false;
     private String printFlagsOptionQuery = null;
     private String printFlagsWithExtraHelpOptionQuery = null;
@@ -264,9 +262,6 @@ public class NativeImage {
     private LinkedHashSet<EnabledOption> enabledLanguages;
 
     private final List<ExcludeConfig> excludedConfigs = new ArrayList<>();
-
-    public static final String nativeImagePropertiesFilename = "native-image.properties";
-    public static final String nativeImageMetaInf = "META-INF/native-image";
 
     public interface BuildConfiguration {
         /**
@@ -341,6 +336,13 @@ public class NativeImage {
         }
 
         /**
+         * @return base image module-path needed for every image (e.g. LIBRARY_SUPPORT)
+         */
+        default List<Path> getImageProvidedModulePath() {
+            throw VMError.unimplemented();
+        }
+
+        /**
          * @return JVMCI API classpath for image builder (jvmci + graal jars)
          */
         default List<Path> getBuilderJVMCIClasspath() {
@@ -387,8 +389,9 @@ public class NativeImage {
                 command.add(getJavaExecutable().toString());
                 command.add("-XX:+PrintFlagsFinal");
                 command.add("-version");
+                Process process = null;
                 try {
-                    Process process = pb.start();
+                    process = pb.start();
                     try (java.util.Scanner inputScanner = new java.util.Scanner(process.getInputStream())) {
                         while (inputScanner.hasNextLine()) {
                             String line = inputScanner.nextLine();
@@ -402,9 +405,12 @@ public class NativeImage {
                         }
                     }
                     process.waitFor();
-                    process.destroy();
                 } catch (Exception e) {
                     /* Probing fails silently */
+                } finally {
+                    if (process != null) {
+                        process.destroy();
+                    }
                 }
             }
 
@@ -468,12 +474,12 @@ public class NativeImage {
         }
     }
 
-    private static class DefaultBuildConfiguration implements BuildConfiguration {
-        private final Path workDir;
-        private final Path rootDir;
-        private final List<String> args;
+    protected static class DefaultBuildConfiguration implements BuildConfiguration {
+        protected final Path workDir;
+        protected final Path rootDir;
+        protected final List<String> args;
 
-        DefaultBuildConfiguration(List<String> args) {
+        protected DefaultBuildConfiguration(List<String> args) {
             this(null, null, args);
         }
 
@@ -540,6 +546,9 @@ public class NativeImage {
 
         @Override
         public List<Path> getBuilderClasspath() {
+            if (USE_NI_JPMS) {
+                return Collections.emptyList();
+            }
             List<Path> result = new ArrayList<>();
             if (useJavaModules()) {
                 result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "graal", "enterprise-graal"));
@@ -555,6 +564,15 @@ public class NativeImage {
 
         @Override
         public List<Path> getImageProvidedClasspath() {
+            return getImageProvidedJars();
+        }
+
+        @Override
+        public List<Path> getImageProvidedModulePath() {
+            return getImageProvidedJars();
+        }
+
+        private List<Path> getImageProvidedJars() {
             return getJars(rootDir.resolve(Paths.get("lib", "svm")));
         }
 
@@ -587,8 +605,12 @@ public class NativeImage {
         @Override
         public List<Path> getBuilderModulePath() {
             List<Path> result = new ArrayList<>();
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
+            if (USE_NI_JPMS) {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
+            } else {
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "jvmci")), "graal-sdk", "enterprise-graal"));
+                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "truffle")), "truffle-api"));
+            }
             return result;
         }
 
@@ -625,6 +647,55 @@ public class NativeImage {
         }
     }
 
+    class DriverMetaInfProcessor implements NativeImageMetaInfResourceProcessor {
+        @Override
+        public void processMetaInfResource(Path classpathEntry, Path resourceRoot, Path resourcePath, MetaInfFileType type) throws IOException {
+            NativeImageArgsProcessor args = NativeImage.this.new NativeImageArgsProcessor(resourcePath.toUri().toString());
+            Path componentDirectory = resourceRoot.relativize(resourcePath).getParent();
+            Function<String, String> resolver = str -> {
+                int nameCount = componentDirectory.getNameCount();
+                String optionArg = null;
+                if (nameCount > 2) {
+                    String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
+                    optionArg = propertyFileSubstitutionValues.get(optionArgKey);
+                }
+                return resolvePropertyValue(str, optionArg, componentDirectory, config);
+            };
+
+            if (type == MetaInfFileType.Properties) {
+                Map<String, String> properties = loadProperties(Files.newInputStream(resourcePath));
+                String imageNameValue = properties.get("ImageName");
+                if (imageNameValue != null) {
+                    addCustomImageBuilderArgs(injectHostedOptionOrigin(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString()));
+                }
+                forEachPropertyValue(properties.get("JavaArgs"), NativeImage.this::addImageBuilderJavaArgs, resolver);
+                forEachPropertyValue(properties.get("Args"), args, resolver);
+            } else {
+                args.accept(oH(type.optionKey) + resourceRoot.relativize(resourcePath));
+            }
+            args.apply(true);
+        }
+
+        @Override
+        public void showWarning(String message) {
+            if (isVerbose()) {
+                NativeImage.showWarning(message);
+            }
+        }
+
+        @Override
+        public void showVerboseMessage(String message) {
+            NativeImage.this.showVerboseMessage(isVerbose(), message);
+        }
+
+        @Override
+        public boolean isExcluded(Path resourcePath, Path classpathEntry) {
+            return excludedConfigs.stream()
+                            .filter(e -> e.jarPattern.matcher(classpathEntry.toString()).find())
+                            .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
+        }
+    }
+
     private ArrayList<String> createFallbackBuildArgs() {
         ArrayList<String> buildArgs = new ArrayList<>();
         Collection<String> fallbackSystemProperties = customJavaArgs.stream()
@@ -655,10 +726,22 @@ public class NativeImage {
         } catch (NativeImage.NativeImageError | InvalidPathException e) {
             throw showError("The given " + oHPath + imagePath + " argument does not specify a valid path", e);
         }
+        boolean[] isPortable = {true};
         String classpathString = imageClasspath.stream()
-                        .map(imagePathPath::relativize)
+                        .map(path -> {
+                            try {
+                                return imagePathPath.relativize(path);
+                            } catch (IllegalArgumentException e) {
+                                isPortable[0] = false;
+                                return path;
+                            }
+                        })
                         .map(ClasspathUtils::classpathToString)
                         .collect(Collectors.joining(File.pathSeparator));
+        if (!isPortable[0]) {
+            showWarning("The produced fallback image will not be portable, because not all classpath entries" +
+                            " could be relativized (e.g., they are on another drive).");
+        }
         buildArgs.add(oHPath + imagePathPath.toString());
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorClasspath) + classpathString);
         buildArgs.add(oH(FallbackExecutor.Options.FallbackExecutorMainClass) + mainClass);
@@ -710,8 +793,11 @@ public class NativeImage {
         }
     }
 
+    private final DriverMetaInfProcessor metaInfProcessor;
+
     protected NativeImage(BuildConfiguration config) {
         this.config = config;
+        this.metaInfProcessor = new DriverMetaInfProcessor();
 
         String configFileEnvVarKey = "NATIVE_IMAGE_CONFIG_FILE";
         String configFile = System.getenv(configFileEnvVarKey);
@@ -729,7 +815,7 @@ public class NativeImage {
         /* Discover supported MacroOptions */
         optionRegistry = new MacroOption.Registry();
 
-        /* Default handler needs to be fist */
+        /* Default handler needs to be first */
         defaultOptionHandler = new DefaultOptionHandler(this);
         registerOptionHandler(defaultOptionHandler);
         apiOptionHandler = new APIOptionHandler(this);
@@ -776,7 +862,10 @@ public class NativeImage {
         config.getBuilderJavaArgs().forEach(this::addImageBuilderJavaArgs);
         addImageBuilderJavaArgs("-Xss10m");
         addImageBuilderJavaArgs(oXms + getXmsValue());
-        addImageBuilderJavaArgs(oXmx + getXmxValue(1));
+        String xmxVal = getXmxValue(1);
+        if (!"0".equals(xmxVal)) {
+            addImageBuilderJavaArgs(oXmx + xmxVal);
+        }
         addImageBuilderJavaArgs("-Duser.country=US", "-Duser.language=en");
         /* Prevent JVM that runs the image builder to steal focus */
         if (OS.getCurrent() != OS.WINDOWS || JavaVersionUtil.JAVA_SPEC > 8) {
@@ -800,19 +889,13 @@ public class NativeImage {
          */
         addImageBuilderJavaArgs("-Xshare:off");
         config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-        config.getImageProvidedClasspath().forEach(this::addImageProvidedClasspath);
 
         if (config.getBuilderInspectServerPath() != null) {
             addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
         }
 
         if (config.useJavaModules()) {
-            String modulePath = config.getBuilderModulePath().stream()
-                            .map(p -> canonicalize(p).toString())
-                            .collect(Collectors.joining(File.pathSeparator));
-            if (!modulePath.isEmpty()) {
-                addImageBuilderJavaArgs(Arrays.asList("--module-path", modulePath));
-            }
+            config.getBuilderModulePath().forEach(this::addImageBuilderModulePath);
             String upgradeModulePath = config.getBuilderUpgradeModulePath().stream()
                             .map(p -> canonicalize(p).toString())
                             .collect(Collectors.joining(File.pathSeparator));
@@ -904,117 +987,16 @@ public class NativeImage {
         }
     }
 
-    enum MetaInfFileType {
-        Properties(null, nativeImagePropertiesFilename),
-        JniConfiguration(ConfigurationFiles.Options.JNIConfigurationResources, ConfigurationFiles.JNI_NAME),
-        ReflectConfiguration(ConfigurationFiles.Options.ReflectionConfigurationResources, ConfigurationFiles.REFLECTION_NAME),
-        ResourceConfiguration(ConfigurationFiles.Options.ResourceConfigurationResources, ConfigurationFiles.RESOURCES_NAME),
-        ProxyConfiguration(ConfigurationFiles.Options.DynamicProxyConfigurationResources, ConfigurationFiles.DYNAMIC_PROXY_NAME),
-        SerializationConfiguration(ConfigurationFiles.Options.SerializationConfigurationResources, ConfigurationFiles.SERIALIZATION_NAME),
-        SerializationDenyConfiguration(ConfigurationFiles.Options.SerializationDenyConfigurationResources, ConfigurationFiles.SERIALIZATION_DENY_NAME);
-
-        final OptionKey<?> optionKey;
-        final String fileName;
-
-        MetaInfFileType(OptionKey<?> optionKey, String fileName) {
-            this.optionKey = optionKey;
-            this.fileName = fileName;
-        }
-    }
-
-    interface NativeImageMetaInfResourceProcessor {
-        void processMetaInfResource(Path classpathEntry, Path resourceRoot, Path resourcePath, MetaInfFileType type, Function<String, String> resolver) throws IOException;
-    }
-
     private void processClasspathNativeImageMetaInf(Path classpathEntry) {
-        processClasspathNativeImageMetaInf(classpathEntry, this::processNativeImageMetaInf);
-    }
-
-    private void processClasspathNativeImageMetaInf(Path classpathEntry, NativeImageMetaInfResourceProcessor metaInfProcessor) {
         try {
-            if (Files.isDirectory(classpathEntry)) {
-                Path nativeImageMetaInfBase = classpathEntry.resolve(Paths.get(nativeImageMetaInf));
-                processNativeImageMetaInf(classpathEntry, nativeImageMetaInfBase, metaInfProcessor);
-            } else {
-                List<Path> jarFileMatches = Collections.emptyList();
-                if (classpathEntry.endsWith(ClasspathUtils.cpWildcardSubstitute)) {
-                    try {
-                        jarFileMatches = Files.list(classpathEntry.getParent())
-                                        .filter(ClasspathUtils::isJar)
-                                        .collect(Collectors.toList());
-                    } catch (NoSuchFileException e) {
-                        /* Fallthrough */
-                    }
-                } else if (ClasspathUtils.isJar(classpathEntry)) {
-                    jarFileMatches = Collections.singletonList(classpathEntry);
-                }
-
-                for (Path jarFile : jarFileMatches) {
-                    URI jarFileURI = URI.create("jar:" + jarFile.toUri());
-                    FileSystem probeJarFS;
-                    try {
-                        probeJarFS = FileSystems.newFileSystem(jarFileURI, Collections.emptyMap());
-                    } catch (UnsupportedOperationException e) {
-                        probeJarFS = null;
-                        if (isVerbose()) {
-                            showWarning(ClasspathUtils.classpathToString(classpathEntry) + " does not describe valid jarfile" + (jarFileMatches.size() > 1 ? "s" : ""));
-                        }
-                    }
-                    if (probeJarFS != null) {
-                        try (FileSystem jarFS = probeJarFS) {
-                            Path nativeImageMetaInfBase = jarFS.getPath("/" + nativeImageMetaInf);
-                            processNativeImageMetaInf(jarFile, nativeImageMetaInfBase, metaInfProcessor);
-                        }
-                    }
-                }
-            }
-        } catch (IOException | FileSystemNotFoundException e) {
-            throw showError("Invalid classpath entry " + ClasspathUtils.classpathToString(classpathEntry), e);
-        }
-    }
-
-    private void processNativeImageMetaInf(Path classpathEntry, Path nativeImageMetaInfBase, NativeImageMetaInfResourceProcessor metaInfProcessor) throws IOException {
-        if (Files.isDirectory(nativeImageMetaInfBase)) {
-            for (MetaInfFileType fileType : MetaInfFileType.values()) {
-                List<Path> nativeImageMetaInfFiles = Files.walk(nativeImageMetaInfBase)
-                                .filter(p -> p.endsWith(fileType.fileName))
-                                .collect(Collectors.toList());
-                for (Path nativeImageMetaInfFile : nativeImageMetaInfFiles) {
-                    boolean excluded = isExcluded(nativeImageMetaInfFile, classpathEntry);
-                    if (excluded) {
-                        continue;
-                    }
-
-                    Path resourceRoot = nativeImageMetaInfBase.getParent().getParent();
-                    Function<String, String> resolver = str -> {
-                        Path componentDirectory = resourceRoot.relativize(nativeImageMetaInfFile).getParent();
-                        int nameCount = componentDirectory.getNameCount();
-                        String optionArg = null;
-                        if (nameCount > 2) {
-                            String optionArgKey = componentDirectory.subpath(2, nameCount).toString();
-                            optionArg = propertyFileSubstitutionValues.get(optionArgKey);
-                        }
-                        return resolvePropertyValue(str, optionArg, componentDirectory, config);
-                    };
-                    showVerboseMessage(isVerbose(), "Apply " + nativeImageMetaInfFile.toUri());
-                    try {
-                        metaInfProcessor.processMetaInfResource(classpathEntry, resourceRoot, nativeImageMetaInfFile, fileType, resolver);
-                    } catch (NativeImageError err) {
-                        showError("Processing " + nativeImageMetaInfFile.toUri() + " failed", err);
-                    }
-                }
-            }
+            NativeImageMetaInfWalker.walkMetaInfForCPEntry(classpathEntry, metaInfProcessor);
+        } catch (NativeImageMetaInfWalker.MetaInfWalkException e) {
+            throw showError(e.getMessage(), e.cause);
         }
     }
 
     public void addExcludeConfig(Pattern jarPattern, Pattern resourcePattern) {
         excludedConfigs.add(new ExcludeConfig(jarPattern, resourcePattern));
-    }
-
-    private boolean isExcluded(Path resourcePath, Path classpathEntry) {
-        return excludedConfigs.stream()
-                        .filter(e -> e.jarPattern.matcher(classpathEntry.toString()).find())
-                        .anyMatch(e -> e.resourcePattern.matcher(resourcePath.toString()).find());
     }
 
     static String injectHostedOptionOrigin(String option, String origin) {
@@ -1037,24 +1019,6 @@ public class NativeImage {
             }
         }
         return option;
-    }
-
-    private void processNativeImageMetaInf(@SuppressWarnings("unused") Path classpathEntry, Path resourceRoot,
-                    Path resourcePath, MetaInfFileType resourceType, Function<String, String> resolver) throws IOException {
-
-        NativeImageArgsProcessor args = new NativeImageArgsProcessor(resourcePath.toUri().toString());
-        if (resourceType == MetaInfFileType.Properties) {
-            Map<String, String> properties = loadProperties(Files.newInputStream(resourcePath));
-            String imageNameValue = properties.get("ImageName");
-            if (imageNameValue != null) {
-                addCustomImageBuilderArgs(injectHostedOptionOrigin(oHName + resolver.apply(imageNameValue), resourcePath.toUri().toString()));
-            }
-            forEachPropertyValue(properties.get("JavaArgs"), this::addImageBuilderJavaArgs, resolver);
-            forEachPropertyValue(properties.get("Args"), args, resolver);
-        } else {
-            args.accept(oH(resourceType.optionKey) + resourceRoot.relativize(resourcePath));
-        }
-        args.apply(true);
     }
 
     static void processManifestMainAttributes(Path path, BiConsumer<Path, Attributes> manifestConsumer) {
@@ -1148,20 +1112,10 @@ public class NativeImage {
         }
         imageClasspath.addAll(customImageClasspath);
 
-        /* Perform JavaArgs consolidation - take the maximum of -Xmx, minimum of -Xms */
-        Long xmxValue = consolidateArgs(imageBuilderJavaArgs, oXmx, SubstrateOptionsParser::parseLong, String::valueOf, () -> 0L, Math::max);
-        Long xmsValue = consolidateArgs(imageBuilderJavaArgs, oXms, SubstrateOptionsParser::parseLong, String::valueOf, () -> SubstrateOptionsParser.parseLong(getXmsValue()), Math::max);
-        if (Long.compareUnsigned(xmsValue, xmxValue) > 0) {
-            replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
-        }
-
         imageBuilderJavaArgs.add("-Djdk.internal.lambda.disableEagerInitialization=true");
         // The following two are for backwards compatibility reasons. They should be removed.
         imageBuilderJavaArgs.add("-Djdk.internal.lambda.eagerlyInitialize=false");
         imageBuilderJavaArgs.add("-Djava.lang.invoke.InnerClassLambdaMetafactory.initializeLambdas=false");
-        if (!imageIncludeBuiltinModules.isEmpty()) {
-            imageBuilderJavaArgs.add("-D" + AbstractNativeImageClassLoaderSupport.PROPERTY_IMAGEINCLUDEBUILTINMODULES + "=" + String.join(",", imageIncludeBuiltinModules));
-        }
 
         /* After JavaArgs consolidation add the user provided JavaArgs */
         boolean afterOption = false;
@@ -1174,6 +1128,14 @@ public class NativeImage {
                 } else {
                     afterOption = false;
                 }
+            }
+        }
+        /* Perform JavaArgs consolidation - take the maximum of -Xmx, minimum of -Xms */
+        Long xmxValue = consolidateArgs(imageBuilderJavaArgs, oXmx, SubstrateOptionsParser::parseLong, String::valueOf, () -> 0L, Math::max);
+        Long xmsValue = consolidateArgs(imageBuilderJavaArgs, oXms, SubstrateOptionsParser::parseLong, String::valueOf, () -> SubstrateOptionsParser.parseLong(getXmsValue()), Math::max);
+        if (xmxValue != null) {
+            if (Long.compareUnsigned(xmsValue, xmxValue) > 0) {
+                replaceArg(imageBuilderJavaArgs, oXms, Long.toUnsignedString(xmxValue));
             }
         }
         addImageBuilderJavaArgs(customJavaArgs.toArray(new String[0]));
@@ -1201,12 +1163,16 @@ public class NativeImage {
             if (!jarOptionMode) {
                 /* Main-class from customImageBuilderArgs counts as explicitMainClass */
                 boolean explicitMainClass = getHostedOptionFinalArgumentValue(customImageBuilderArgs, oHClass) != null;
+                String mainClassModule = getHostedOptionFinalArgumentValue(imageBuilderArgs, oHModule);
 
+                boolean hasMainClassModule = mainClassModule != null && !mainClassModule.isEmpty();
+                boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
-                    if (buildExecutable && (mainClass == null || mainClass.isEmpty())) {
-                        showError("Please specify class containing the main entry point method. (see --help)");
+                    if (buildExecutable && !hasMainClassModule && !hasMainClass) {
+                        String moduleMsg = USE_NI_JPMS ? " (or <module>/<mainclass>)" : "";
+                        showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
                     }
-                } else {
+                } else if (!moduleOptionMode) {
                     /* extraImageArgs main-class overrules previous main-class specification */
                     explicitMainClass = true;
                     mainClass = extraImageArgs.remove(0);
@@ -1220,8 +1186,12 @@ public class NativeImage {
                         if (explicitMainClass) {
                             imageBuilderArgs.add(oH(SubstrateOptions.Name, "main-class lower case as image name") + mainClass.toLowerCase());
                         } else if (getHostedOptionFinalArgumentValue(imageBuilderArgs, oHName) == null) {
-                            /* Although very unlikely, report missing image-name if needed. */
-                            throw showError("Missing image-name. Use " + oHName + "<imagename> to provide one.");
+                            if (hasMainClassModule) {
+                                imageBuilderArgs.add(oH(SubstrateOptions.Name, "image-name from module-name") + mainClassModule.toLowerCase());
+                            } else {
+                                /* Although very unlikely, report missing image-name if needed. */
+                                throw showError("Missing image-name. Use " + oHName + "<imagename> to provide one.");
+                            }
                         }
                     }
                 } else {
@@ -1248,15 +1218,25 @@ public class NativeImage {
             showError(leftoverArgs.stream().collect(Collectors.joining(", ", prefix, "")));
         }
 
+        LinkedHashSet<Path> finalImageModulePath = new LinkedHashSet<>(imageModulePath);
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageBuilderBootClasspath);
-        finalImageClasspath.addAll(imageProvidedClasspath);
         finalImageClasspath.addAll(imageClasspath);
+
+        List<Path> imageProvidedJars;
+        if (USE_NI_JPMS) {
+            imageProvidedJars = config.getImageProvidedModulePath();
+            finalImageModulePath.addAll(imageProvidedJars);
+        } else {
+            imageProvidedJars = config.getImageProvidedClasspath();
+            finalImageClasspath.addAll(imageProvidedJars);
+        }
+        imageProvidedJars.forEach(this::processClasspathNativeImageMetaInf);
 
         if (!config.buildFallbackImage() && imageBuilderArgs.contains(oHFallbackThreshold + SubstrateOptions.ForceFallback)) {
             /* Bypass regular build and proceed with fallback image building */
             return 2;
         }
-        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderArgs, finalImageClasspath);
+        return buildImage(imageBuilderJavaArgs, imageBuilderBootClasspath, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
     }
 
     private static String getLocationAgnosticArgPrefix(String argPrefix) {
@@ -1289,7 +1269,7 @@ public class NativeImage {
         }
 
         /* If no customImageClasspath was specified put "." on classpath */
-        return customImageClasspath.isEmpty();
+        return customImageClasspath.isEmpty() && imageModulePath.isEmpty();
     }
 
     private static boolean isListArgumentSet(Collection<String> list, String argPrefix) {
@@ -1329,7 +1309,7 @@ public class NativeImage {
         if (!agentOptions.isEmpty()) {
             args.add("-agentlib:native-image-diagnostics-agent=" + agentOptions);
         }
-        args.add("-javaagent:" + config.getAgentJAR().toAbsolutePath().toString() + (agentOptions.isEmpty() ? "" : "=" + agentOptions));
+        args.add("-javaagent:" + config.getAgentJAR().toAbsolutePath() + (agentOptions.isEmpty() ? "" : "=" + agentOptions));
         return args;
     }
 
@@ -1356,7 +1336,7 @@ public class NativeImage {
 
         String[] parts = targetPlatform.split("-");
         if (parts.length != 2) {
-            throw UserError.abort("--target argument must be in format <OS>-<architecture>");
+            throw NativeImage.showError("--target argument must be in format <OS>-<architecture>");
         }
 
         targetOS = parts[0];
@@ -1378,78 +1358,119 @@ public class NativeImage {
     private String imageName;
     private String imagePath;
 
-    protected static List<String> createImageBuilderArgs(ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp) {
+    protected static List<String> createImageBuilderArgs(ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp, LinkedHashSet<Path> imagemp) {
         List<String> result = new ArrayList<>();
-        result.add(SubstrateOptions.IMAGE_CLASSPATH_PREFIX);
-        result.add(imagecp.stream().map(ClasspathUtils::classpathToString).collect(Collectors.joining(File.pathSeparator)));
+        if (!imagecp.isEmpty()) {
+            result.add(SubstrateOptions.IMAGE_CLASSPATH_PREFIX);
+            result.add(imagecp.stream().map(ClasspathUtils::classpathToString).collect(Collectors.joining(File.pathSeparator)));
+        }
+        if (!imagemp.isEmpty()) {
+            result.add(SubstrateOptions.IMAGE_MODULEPATH_PREFIX);
+            result.add(imagemp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        }
         result.addAll(imageArgs);
         return result;
     }
 
+    protected static String createVMInvocationArgumentFile(List<String> arguments) {
+        try {
+            Path argsFile = Files.createTempFile("vminvocation", ".args");
+            String joinedOptions = String.join("\n", arguments);
+            Files.write(argsFile, joinedOptions.getBytes());
+            argsFile.toFile().deleteOnExit();
+            return "@" + argsFile;
+        } catch (IOException e) {
+            throw showError(e.getMessage());
+        }
+    }
+
     protected static String createImageBuilderArgumentFile(List<String> imageBuilderArguments) {
         try {
-            Path argsFile = Files.createTempFile("native-image", "args");
+            Path argsFile = Files.createTempFile("native-image", ".args");
             String joinedOptions = String.join("\0", imageBuilderArguments);
             Files.write(argsFile, joinedOptions.getBytes());
-            Runtime.getRuntime().addShutdownHook(new Thread() {
-                @Override
-                public void run() {
-                    try {
-                        Files.delete(argsFile);
-                    } catch (IOException e) {
-                        System.err.println("Failed to delete temporary image builder arguments file: " + argsFile.toString());
-                    }
-                }
-            });
+            argsFile.toFile().deleteOnExit();
             return NativeImageGeneratorRunner.IMAGE_BUILDER_ARG_FILE_OPTION + argsFile.toString();
         } catch (IOException e) {
             throw showError(e.getMessage());
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp) {
-        /* Construct ProcessBuilder command from final arguments */
-        List<String> command = new ArrayList<>();
-        command.add(canonicalize(config.getJavaExecutable()).toString());
-        command.addAll(javaArgs);
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> bcp, LinkedHashSet<Path> cp, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
+                    LinkedHashSet<Path> imagemp) {
+        List<String> arguments = new ArrayList<>();
+        arguments.addAll(javaArgs);
         if (!bcp.isEmpty()) {
-            command.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
+            arguments.add(bcp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator, "-Xbootclasspath/a:", "")));
         }
 
-        command.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        command.add(config.getGeneratorMainClass());
+        if (!cp.isEmpty()) {
+            arguments.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
+        }
+        if (!mp.isEmpty()) {
+            List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+            arguments.addAll(strings);
+        }
+
+        if (USE_NI_JPMS) {
+            arguments.addAll(Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME));
+        } else {
+            arguments.add(config.getGeneratorMainClass());
+        }
         if (IS_AOT && OS.getCurrent().hasProcFS) {
             /*
              * GR-8254: Ensure image-building VM shuts down even if native-image dies unexpected
              * (e.g. using CTRL-C in Gradle daemon mode)
              */
-            command.addAll(Arrays.asList(SubstrateOptions.WATCHPID_PREFIX, "" + ProcessProperties.getProcessID()));
+            arguments.addAll(Arrays.asList(SubstrateOptions.WATCHPID_PREFIX, "" + ProcessProperties.getProcessID()));
         }
-        List<String> finalImageBuilderArgs = createImageBuilderArgs(imageArgs, imagecp);
-        List<String> completeCommandList = Stream.concat(command.stream(), finalImageBuilderArgs.stream()).collect(Collectors.toList());
+        List<String> finalImageBuilderArgs = createImageBuilderArgs(imageArgs, imagecp, imagemp);
+
+        /* Construct ProcessBuilder command from final arguments */
+        List<String> command = new ArrayList<>();
+        command.add(canonicalize(config.getJavaExecutable()).toString());
+        List<String> completeCommandList = new ArrayList<>(command);
+        if (config.useJavaModules()) { // Only in JDK9+ 'java' executable supports @argFiles.
+            command.add(createVMInvocationArgumentFile(arguments));
+        } else {
+            command.addAll(arguments);
+        }
         command.add(createImageBuilderArgumentFile(finalImageBuilderArgs));
 
-        showVerboseMessage(isVerbose() || dryRun, "Executing [");
-        showVerboseMessage(isVerbose() || dryRun, SubstrateUtil.getShellCommandString(completeCommandList, true));
-        showVerboseMessage(isVerbose() || dryRun, "]");
+        completeCommandList.addAll(Stream.concat(arguments.stream(), finalImageBuilderArgs.stream()).collect(Collectors.toList()));
+        final String commandLine = SubstrateUtil.getShellCommandString(completeCommandList, true);
+        if (isDiagnostics()) {
+            // write to the diagnostics dir
+            ReportUtils.report("command line arguments", diagnosticsDir, "command-line", "txt", printWriter -> printWriter.write(commandLine));
+        } else {
+            showVerboseMessage(isVerbose() || dryRun, "Executing [");
+            showVerboseMessage(isVerbose() || dryRun, commandLine);
+            showVerboseMessage(isVerbose() || dryRun, "]");
+        }
 
         if (dryRun) {
             return 0;
         }
 
         int exitStatus = 1;
+
+        Process p = null;
         try {
             ProcessBuilder pb = new ProcessBuilder();
             pb.command(command);
-            Process p = pb.inheritIO().start();
+            p = pb.inheritIO().start();
             exitStatus = p.waitFor();
         } catch (IOException | InterruptedException e) {
             throw showError(e.getMessage());
+        } finally {
+            if (p != null) {
+                p.destroy();
+            }
         }
         return exitStatus;
     }
 
-    private static final Function<BuildConfiguration, NativeImage> defaultNativeImageProvider = config -> IS_AOT ? NativeImageServer.create(config) : new NativeImage(config);
+    private static final Function<BuildConfiguration, NativeImage> defaultNativeImageProvider = config -> new NativeImage(config);
 
     public static void main(String[] args) {
         performBuild(new DefaultBuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
@@ -1481,7 +1502,7 @@ public class NativeImage {
         System.exit(0);
     }
 
-    private static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
+    protected static void build(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
         NativeImage nativeImage = nativeImageProvider.apply(config);
         if (config.getBuildArgs().isEmpty()) {
             nativeImage.showMessage(usageText);
@@ -1539,16 +1560,16 @@ public class NativeImage {
         }
     }
 
+    public void addImageBuilderModulePath(Path modulePathEntry) {
+        imageBuilderModulePath.add(canonicalize(modulePathEntry));
+    }
+
     void addImageBuilderClasspath(Path classpath) {
         imageBuilderClasspath.add(canonicalize(classpath));
     }
 
     void addImageBuilderBootClasspath(Path classpath) {
         imageBuilderBootClasspath.add(canonicalize(classpath));
-    }
-
-    public void addImageIncludeBuiltinModules(String moduleName) {
-        imageIncludeBuiltinModules.add(moduleName);
     }
 
     void addImageBuilderJavaArgs(String... javaArgs) {
@@ -1602,24 +1623,108 @@ public class NativeImage {
     }
 
     /**
-     * For adding classpath elements that are only on the classpath in the context of native-image
-     * building. I.e. that are not on the classpath when the application would be run with the java
-     * command. (library-support.jar)
-     */
-    private void addImageProvidedClasspath(Path classpath) {
-        VMError.guarantee(imageClasspath.isEmpty() && customImageClasspath.isEmpty());
-        Path classpathEntry = canonicalize(classpath);
-        if (imageProvidedClasspath.add(classpathEntry)) {
-            processManifestMainAttributes(classpathEntry, this::handleClassPathAttribute);
-            processClasspathNativeImageMetaInf(classpathEntry);
-        }
-    }
-
-    /**
      * For adding classpath elements that are automatically put on the image-classpath.
      */
     void addImageClasspath(Path classpath) {
         addImageClasspathEntry(imageClasspath, classpath, true);
+    }
+
+    LinkedHashSet<String> builderModuleNames = null;
+
+    LinkedHashSet<String> getBuilderModuleNames() {
+        if (builderModuleNames == null) {
+            ProcessBuilder pb = new ProcessBuilder();
+            List<String> command = pb.command();
+            command.add(config.getJavaExecutable().toString());
+            command.add("--module-path");
+            command.add(Stream.concat(config.getBuilderModulePath().stream(), config.getImageProvidedModulePath().stream())
+                            .map(this::canonicalize).map(Path::toString)
+                            .collect(Collectors.joining(File.pathSeparator)));
+            command.add("--list-modules");
+            pb.redirectErrorStream();
+            Process process = null;
+            int exitValue = -1;
+            LinkedHashSet<String> modules = new LinkedHashSet<>();
+            String message = "Unable to determine image builder modules";
+            try {
+                process = pb.start();
+                try (Scanner scanner = new Scanner(process.getInputStream())) {
+                    while (scanner.hasNextLine()) {
+                        String token = scanner.next();
+                        modules.add(token.split("@", 2)[0]);
+                        scanner.nextLine();
+                    }
+                }
+                exitValue = process.waitFor();
+            } catch (IOException | InterruptedException e) {
+                throw showError(message, e);
+            } finally {
+                if (process != null) {
+                    process.destroy();
+                }
+                if (exitValue != 0) {
+                    throw showError(message + " (nonzero exit value)");
+                }
+            }
+
+            builderModuleNames = modules;
+        }
+        return builderModuleNames;
+    }
+
+    void addImageModulePath(Path modulePathEntry) {
+        addImageModulePath(modulePathEntry, true);
+    }
+
+    void addImageModulePath(Path modulePathEntry, boolean strict) {
+        Path mpEntry;
+        try {
+            mpEntry = canonicalize(modulePathEntry);
+        } catch (NativeImageError e) {
+            if (strict) {
+                throw e;
+            }
+
+            if (isVerbose()) {
+                showWarning("Invalid module-path entry: " + modulePathEntry);
+            }
+            /* Allow non-existent module-path entries to comply with `java` command behaviour. */
+            imageModulePath.add(canonicalize(modulePathEntry, false));
+            return;
+        }
+
+        if (imageModulePath.contains(mpEntry)) {
+            /* Duplicate entries are silently ignored like with the java command */
+            return;
+        }
+        List<String> moduleNames = getModuleNames(mpEntry);
+        if (moduleNames.size() == 1) {
+            String moduleName = moduleNames.get(0);
+            if (getBuilderModuleNames().contains(moduleName)) {
+                /* Modules provided by the image-builder are not allowed on the -imagemp */
+                String modulePathEntryStr = "module " + moduleName + " from " + modulePathEntry;
+                showWarning("Ignoring " + modulePathEntryStr + " (implicitly provided by builder)");
+                return;
+            }
+        }
+
+        imageModulePath.add(mpEntry);
+        processClasspathNativeImageMetaInf(mpEntry);
+    }
+
+    @SuppressWarnings("unchecked")
+    List<String> getModuleNames(Path... modulePathEntries) {
+        try {
+            Class<?> moduleAccess = Class.forName("com.oracle.svm.driver.jdk11.ModuleAccess");
+            Method getModuleNames = moduleAccess.getMethod("getModuleNames", Path[].class);
+            return (List<String>) getModuleNames.invoke(null, (Object) modulePathEntries);
+        } catch (ClassNotFoundException e) {
+            throw showError("com.oracle.svm.driver.jdk11.ModuleAccess.getModuleNames only available on Java > 8");
+        } catch (ReflectiveOperationException e) {
+            String entries = Arrays.stream(modulePathEntries)
+                            .map(Path::toString).collect(Collectors.joining(", ", "[", "]"));
+            throw showError("Failed to get module-names for " + entries, e);
+        }
     }
 
     /**
@@ -1676,12 +1781,28 @@ public class NativeImage {
         verbose = val;
     }
 
+    void setDiagnostics(boolean val) {
+        diagnostics = val;
+        diagnosticsDir = Paths.get("reports", ReportUtils.timeStampedFileName("diagnostics", "")).toString();
+        if (val) {
+            verbose = true;
+        }
+    }
+
     void setJarOptionMode(boolean val) {
         jarOptionMode = val;
     }
 
+    void setModuleOptionMode(boolean val) {
+        moduleOptionMode = val;
+    }
+
     boolean isVerbose() {
         return verbose;
+    }
+
+    boolean isDiagnostics() {
+        return diagnostics;
     }
 
     boolean useDebugAttach() {
@@ -1916,35 +2037,6 @@ public class NativeImage {
                 showMessage("Could not recursively delete path: " + toDelete);
                 e.printStackTrace();
             }
-        }
-    }
-
-    /**
-     * Command line entry point when running on JDK9+. This is required to dynamically export Graal
-     * to SVM and it requires {@code --add-exports=java.base/jdk.internal.module=ALL-UNNAMED} to be
-     * on the VM command line.
-     *
-     * Note: This is a workaround until GR-16855 is resolved.
-     */
-    public static class JDK9Plus {
-
-        // Must be distinct from NativeImage.IS_AOT since the module
-        // exporting must be executed prior to NativeImage being loaded.
-        private static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
-
-        public static void main(String[] args) {
-            if (!IS_AOT) {
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler", false);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("jdk.internal.vm.compiler.management", true);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("com.oracle.graal.graal_enterprise", true);
-                ModuleSupport.exportAndOpenAllPackagesToUnnamed("java.xml", false);
-                if (JavaVersionUtil.JAVA_SPEC >= 16) {
-                    ModuleSupport.exportAndOpenPackageToUnnamed("java.base", "sun.reflect.annotation", false);
-                    ModuleSupport.exportAndOpenPackageToUnnamed("java.base", "sun.security.jca", false);
-                    ModuleSupport.exportAndOpenPackageToUnnamed("jdk.jdeps", "com.sun.tools.classfile", false);
-                }
-            }
-            NativeImage.main(args);
         }
     }
 
